[gd_scene load_steps=30 format=3 uid="uid://egpgi7r4axse"]

[ext_resource type="Texture2D" uid="uid://bc0prc5dm7yfl" path="res://assets/sprites/slime_green.png" id="1_1p1ra"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_5v08u"]
[ext_resource type="PackedScene" uid="uid://cf2pfkahxkmul" path="res://scenes/damage_zone.tscn" id="3_lq6ky"]
[ext_resource type="FontFile" uid="uid://1t0o57nwnw7a" path="res://assets/fonts/PixelOperator8.ttf" id="4_x7gu7"]
[ext_resource type="AudioStream" uid="uid://dja5r6igladg1" path="res://assets/sounds/slime_damage.wav" id="5_ofii5"]
[ext_resource type="AudioStream" uid="uid://do4el1rspnwjq" path="res://assets/sounds/slime_death.wav" id="6_mdrbn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_waykd"]
atlas = ExtResource("1_1p1ra")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpvat"]
atlas = ExtResource("1_1p1ra")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gfbt"]
atlas = ExtResource("1_1p1ra")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6y14"]
atlas = ExtResource("1_1p1ra")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8fo3"]
atlas = ExtResource("1_1p1ra")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rs3y"]
atlas = ExtResource("1_1p1ra")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mgsr"]
atlas = ExtResource("1_1p1ra")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_23sgh"]
atlas = ExtResource("1_1p1ra")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhcv6"]
atlas = ExtResource("1_1p1ra")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_up153"]
atlas = ExtResource("1_1p1ra")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ct0"]
atlas = ExtResource("1_1p1ra")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lca2o"]
atlas = ExtResource("1_1p1ra")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4lw3"]
atlas = ExtResource("1_1p1ra")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kqbu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_waykd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpvat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gfbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6y14")
}],
"loop": true,
"name": &"damage_received",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8fo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rs3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mgsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23sgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhcv6")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_up153")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ct0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lca2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4lw3")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfcbk"]
size = Vector2(8, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xir3e"]
size = Vector2(8, 13)

[sub_resource type="Animation" id="Animation_i6r16"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animation:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_8r0d2"]
resource_name = "damage_received"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animation:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"damage_received"]
}

[sub_resource type="Animation" id="Animation_h1sn0"]
resource_name = "death"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_0cq07"]
resource_name = "experience_label_show"
length = 1.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("experience_label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-45, -29), Vector2(-45, -30), Vector2(-45, -31), Vector2(-45, -32), Vector2(-45, -33)]
}

[sub_resource type="Animation" id="Animation_tyq74"]
resource_name = "idle"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animation:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ry8w4"]
_data = {
"RESET": SubResource("Animation_i6r16"),
"damage_received": SubResource("Animation_8r0d2"),
"death": SubResource("Animation_h1sn0"),
"experience_label_show": SubResource("Animation_0cq07"),
"idle": SubResource("Animation_tyq74")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1nv3q"]
radius = 75.1066

[node name="enemy" type="Area2D"]
script = ExtResource("1_5v08u")

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_7kqbu")
animation = &"idle"

[node name="collision_body" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_gfcbk")

[node name="damage_zone" parent="." instance=ExtResource("3_lq6ky")]

[node name="collision_damage" type="CollisionShape2D" parent="damage_zone"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_xir3e")

[node name="timer_death" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ry8w4")
}

[node name="timer_attack_cooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="collision_aggro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_aggro"]
shape = SubResource("CircleShape2D_1nv3q")

[node name="experience_label" type="Label" parent="."]
visible = false
offset_left = -45.0
offset_top = -31.0
offset_right = 41.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0.639216, 0.184314, 0.741176, 1)
theme_override_fonts/font = ExtResource("4_x7gu7")
text = "+ 1 EXP"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -6)
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
speed_scale = 0.5
explosiveness = 0.8
direction = Vector2(0, -100)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
color = Color(2.55093e-06, 0.663335, 0.220314, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ofii5")
volume_db = -10.0
max_polyphony = 5

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1, 0)
stream = ExtResource("6_mdrbn")
volume_db = -10.0

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="timer_death" to="." method="_on_timer_death_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="collision_aggro" to="." method="_on_collision_aggro_body_entered"]
